--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -54,3 +54,13 @@ h1 {
     .MultiCarousel .rightLst { right:0; }
     
         .MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over { pointer-events: none; background:#ccc; }
+
+/* Vertical line*/
+#vl{
+    border-left: 1px solid rgb(197, 197, 197);
+    height: 100%;
+    position: absolute;
+    left: 15%;
+    margin-left: -3px;
+    top: 22%;
+  }
