--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -55,12 +55,22 @@ h1 {
     
         .MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over { pointer-events: none; background:#ccc; }
 
-/* Vertical line*/
-#vl{
-    border-left: 1px solid rgb(197, 197, 197);
+/* product page css*/
+.container {
+    width: 100%;
     height: 100%;
-    position: absolute;
-    left: 15%;
-    margin-left: -3px;
-    top: 22%;
-  }
+    background: rgb(244, 247, 247);
+    margin: auto;
+    padding: 10px;
+}
+.one {
+    width: 15%;
+    height: 200px;
+    background: white;
+    float: left;
+}
+.two {
+    margin-left: 15%;
+    height: auto;
+    background: white;
+}
