--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -23,6 +23,8 @@ li a:hover {
     background-color: #afd275;
 }
 
+/*login page css*/
+
 #login-form input{
     margin-top: 10px;
     width: 90%;
@@ -120,7 +122,7 @@ h1 {
     margin-bottom: 5%;
 }
 
-/* Create two equal columns that floats next to each other */
+/* two equal columns that floats next to each other */
 .column {
     float: left;
     width: 15%;
@@ -153,7 +155,8 @@ footer{
 }
 /* buy button*/
 
-button{
+#buy{
+    background-color: #afd275;
     border:none;
     border-radius: 25%;
     padding: 10px;
@@ -163,8 +166,4 @@ button{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-}
-#buy{
-    background-color: #afd275;
-    
 }
