login done, profile almost done

--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -8,7 +8,7 @@
 <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/products">Products</a></li>
-        <% if(user){ %>
+        <% if(user != undefined){ %>
             <li style="float:right"><a href="/logout">Log out</a></li>
           <% } else{ %>  
             <li style="float:right"><a href="/login">Sign in</a></li>
