--- a/Views/profile.ejs
+++ b/Views/profile.ejs
@@ -1,13 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="/js/carousel.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>this is the profile page</h1>
+    <title>Green World</title>
+    <script> function editing(){
+        editProfile = true;
+        console.log(editProfile);
+    }</script>
     
+</head>
+<header>
+    <!--navigation bar-->
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/products">Products</a></li>
+        <% if(user != undefined){ %> 
+            <li style="float:right"><a href="/logout">Log out</a></li>
+          <% } else{ %>  
+            <li style="float:right"><a href="/login">Sign in</a></li>
+         <% } %>
+        <li><a href="/contact">Contact us</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="/staff">Staff</a></li>
+    </ul>
+</header>
+<body>
+    <div id="profileContent">
+        <% if(!editProfile) { %>
+            <form action="/profile/edit">
+        <p>Full Name: <%= loggedUser.fullName %></p>
+        <p>Password: ***********</p>
+        <p>Email Address: <%= loggedUser.email %></p>
+        <p>Contact Number: <%= loggedUser.contactNumber %></p>
+        <p>Billing Address: <%= loggedUser.billingAddress %></p>
+        <p>Delivery Address: <%= loggedUser.deliveryAddress %></p>
+        <input type="submit" label="Edit Profile" >
+    </form>
+        <% } else { %>
+            <form id="editProfile-Form" method="POST" action="/profile">
+                <label>Password:</label>
+                <input  type="password" name="password"/><br>
+                <label>Confirm Password:</label>
+                <input  type="password" name="confirmPassword"/><br>
+                <label>Full Name:</label>
+                <input type="text" name="fullName" placeholder="<%= loggedUser.fullName %>"/><br>
+                <label>Email address:</label>
+                <input type="text" name="email" placeholder="<%= loggedUser.email %>"/><br>
+                <label>Contact Number:</label>
+                <input type="text" name="contactNumber" placeholder="<%= loggedUser.contactNumber %>"/><br>
+                <label>Billing Address:</label>
+                <input type="text" name="billingAddress" placeholder="<%= loggedUser.billingAddress %>"/><br>
+                <label>Delivery Address:</label>
+                <input type="text" name="deliveryAddress" placeholder="<%= loggedUser.deliveryAddress %>"/><br>
+                <input type="submit" label="Save Profile" >
+            </form>
+            <% } %>
+    </div>
+
+    
+        <br>
+        <br>
+        <footer>
+            <ul>
+                <li><a href=" ">Privacy Policy</a></li>
+                <li><a href=" ">Refund Policy</a></li>
+                <li><a href=" ">Contact Us</a></li>
+            </ul>
+        </footer>
 </body>
+
 </html>
