product id page is done

--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -31,16 +31,10 @@
                     <a onclick="">Recycle bag</a>
                 </div>
                 <div class= "two row">
-                    <%= if(products)=> { %>
-                        <div class="column">
-                            <img src="" class="cover-img">
-                                <p><%= products.name %></p>
-                                <h3>&dollar;<%= products.price %></h3>
-                             <!---  <p><%= product.description %></p>-->
-                        </div>
-                   <% }; %>
-                    
-                        
+               <h1><%= products._id %></h1>
+               <h1><%= products.name %></h1>
+                   
+                </div>
                 </div>
             </section>
             <footer>
