--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -31,8 +31,10 @@
                     <a onclick="">Recycle bag</a>
                 </div>
                 <div class= "two row">
+                        <img src="../Public/images/myImage-1565653643559.png" class="cover-img">
                <h1><%= products._id %></h1>
                <h1><%= products.name %></h1>
+               <h1><%= products.description%></h1>
                    
                 </div>
                 </div>
