--- a/views/products.ejs
+++ b/views/products.ejs
@@ -44,7 +44,7 @@
                     <br>
                     <a onclick="">Recycle bag</a>
                 </div>
-                <div class= "two row" > <!-- onclick="location.href='/products/:id'"-->
+                <div class= "two row" > 
                     <% if(products.length>0){ %>
                         <% for (var i=0; i<products.length; i++) { %>
                                 <div class="column">
