edit product is working

--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -35,6 +35,7 @@
                <h1><%= products._id %></h1>
                <h1><%= products.name %></h1>
                <h1><%= products.description%></h1>
+               <a href='/editProduct/<%= products._id %>'><button class="btn">Edit product</button></a>
                    
                 </div>
                 </div>
