--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -1,58 +1,51 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-   <link rel="stylesheet" type="text/css" href="/css/main.css">
-<title>Green World Login</title>
-</head>
-<!--navigation bar-->
-<ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/products">Products</a></li>
-        <% if(user != undefined){ %>
-            <li style="float:right"><a href="/logout">Log out</a></li>
-          <% } else{ %>  
-            <li style="float:right"><a href="/login">Sign in</a></li>
-         <% } %>
-        <li><a href="/contact">Contact us</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/staff">Staff</a></li>
-    </ul>
-<body>
-    <div style="overflow: hidden; width:100%;">
-        <div id="login">
-            <!--<h1>Login</h1>-->
-            <form id="login-form" method="post" action="/loginUser">
-                    <h1 style="text-align: center">Log in!</h1>
-                    <label>Username:</label>
-                    <input type="text" name="username"/><br>
-                    <label>Password:</label>
-                    <input type="password" name="password"/>
-                    <input type="submit" label="login">
-            </form>
-        </div>
-        <div id="signup">
-                <form id="signup-form" method="post" action="/signUp">
-                        <h1 style="text-align: center">Sign up!</h1>
+    <head>
+            <% include ./partials/head %>
+    </head>
+    <header>
+    <!--navigation bar-->
+         <% include ./partials/header %>
+    </header>
+    <body>
+        <div style="overflow: hidden; width:100%;">
+            <div id="login">
+                <!--<h1>Login</h1>-->
+                <form id="login-form" method="post" action="/loginUser">
+                        <h1 style="text-align: center">Log in!</h1>
                         <label>Username:</label>
                         <input type="text" name="username"/><br>
                         <label>Password:</label>
-                        <input  type="password" name="password"/><br>
-                        <label>Full Name:</label>
-                        <input type="text" name="fullName" /><br>
-                        <label>Email address:</label>
-                        <input type="text" name="email" /><br>
-                        <label>Contact Number:</label>
-                        <input type="text" name="contactNumber" /><br>
-                        <label>Billing Address:</label>
-                        <input type="text" name="billingAddress" /><br>
-                        <label>Delivery Address:</label>
-                        <input type="text" name="deliveryAddress" /><br>
-
-                        <input type="submit" label="Sign up" >
+                        <input type="password" name="password"/>
+                        <input type="submit" label="login">
                 </form>
-            <!--<h1>Or signup.</h1>-->
-        </div>
-    </div>
+            </div>
+            <div id="signup">
+                    <form id="signup-form" method="post" action="/signUp">
+                            <h1 style="text-align: center">Sign up!</h1>
+                            <label>Username:</label>
+                            <input type="text" name="username"/><br>
+                            <label>Password:</label>
+                            <input  type="password" name="password"/><br>
+                            <label>Full Name:</label>
+                            <input type="text" name="fullName" /><br>
+                            <label>Email address:</label>
+                            <input type="text" name="email" /><br>
+                            <label>Contact Number:</label>
+                            <input type="text" name="contactNumber" /><br>
+                            <label>Billing Address:</label>
+                            <input type="text" name="billingAddress" /><br>
+                            <label>Delivery Address:</label>
+                            <input type="text" name="deliveryAddress" /><br>
 
-</body>
+                            <input type="submit" label="Sign up" >
+                    </form>
+                <!--<h1>Or signup.</h1>-->
+            </div>
+        </div>
+        <footer>
+                <% include ./partials/footer %>
+        </footer>
+
+    </body>
 </html>
