--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -11,7 +11,7 @@
     <li><a href="/contact">Contact us</a></li>
     <li><a href="/profile">Profile</a></li>
     <li><a href="/staff">Staff</a></li>
-    <li style="float:right"><a href="#">Shopping cart<span>
+    <li style="float:right"><a href="/cart">Shopping cart<span>
       <% if(session.cart) { %>
       <span class="badge"><%= session.cart.totalQty %></span>
   <% } %></span></a></li>
