--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -23,7 +23,7 @@
                <h1><%= products.name %></h1>
                <h1><%= products.description%></h1>
                <a href='/editProduct/<%= products._id %>'><button class="btn">Edit product</button></a>
-               <a href='/cart/<%= products._id %>'><button class="btn">Add to cart</button></a>
+               <a href='/add-to-cart/<%= products._id %>'><button class="btn">Add to cart</button></a>
                    
                 </div>
                 </div>
