change the destination

--- a/Views/cart.ejs
+++ b/Views/cart.ejs
@@ -22,7 +22,7 @@
                         </div>
                         <div class="col-75">
                             <div class="container">
-                            <form action="/action_page.php">
+                            <form action=" ">
                             
                                 <div class="row">
                                 <div class="col-50">
@@ -87,10 +87,8 @@
                 
             <% } else { %>
             <h1>cart is empty</h1>
-            <a href='/products %>'><button class="btn">Continue Shopping</button></a>
+            <a href='/products %>'><button class="">Continue Shopping</button></a>
             <% } %>
     </body>
-    <footer>
-        <% include ./partials/footer %>
-    </footer>
+    
 </html>
