--- a/Views/profile.ejs
+++ b/Views/profile.ejs
@@ -19,14 +19,18 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/products">Products</a></li>
-        <% if(user != undefined){ %> 
+        <% if(user != undefined){ %>
             <li style="float:right"><a href="/logout">Log out</a></li>
-          <% } else{ %>  
+            <li><a href="/profile">Profile</a></li>
+            <% if(userObject.userType == "Staff") { %>
+                <li><a href="/staff">Staff</a></li>
+            <% } %>
+          <% } else { %>  
             <li style="float:right"><a href="/login">Sign in</a></li>
-         <% } %>
+          <% } %>
         <li><a href="/contact">Contact us</a></li>
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/staff">Staff</a></li>
+        
+        
     </ul>
 </header>
 <body>
