--- a/Views/staff.ejs
+++ b/Views/staff.ejs
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <head>
+        <link rel="stylesheet" href="/css/main.css">
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="/js/carousel.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Staff</title>
 </head>
+<header>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/products">Products</a></li>
+        <% if(user != undefined){ %>
+            <li style="float:right"><a href="/logout">Log out</a></li>
+            <li><a href="/profile">Profile</a></li>
+            <% if(userObject.userType == "Staff") { %>
+                <li><a href="/staff">Staff</a></li>
+            <% } %>
+          <% } else { %>  
+            <li style="float:right"><a href="/login">Sign in</a></li>
+          <% } %>
+        <li><a href="/contact">Contact us</a></li>
+        
+        
+    </ul>
+</header>
 <body>
-    <h1>this is the staff page</h1>
+    <% if(staffAccounts.length>0){ %>
+        <% for (var i=0; i<staffAccounts.length; i++) { %>
+                <div class="column">
+                            <p><%= staffAccounts[i].fullName %></p>
+                            <p><%= staffAccounts[i].workNumber %></p>
+                            <p><%= staffAccounts[i].mobileNumber %></p>
+                            <p><%= staffAccounts[i].address %></p>
+                            <p><%= staffAccounts[i].email %></p>
+                    </div>
+            <% }%>
+    <% } else { %>
+        no record found
+        <% } %>
 </body>
 </html>
