--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -11,18 +11,21 @@
 <header>
        <!--navigation bar-->
        <ul>
-            
-            <li><a href="/">Home</a></li>
-            <li><a href="/products">Products</a></li>
-            <% if(user != undefined){ %>
-                <li style="float:right"><a href="/logout">Log out</a></li>
-              <% } else{ %>  
-                <li style="float:right"><a href="/login">Sign in</a></li>
-             <% } %>
-            <li><a href="/contact">Contact us</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/products">Products</a></li>
+        <% if(user != undefined){ %>
+            <li style="float:right"><a href="/logout">Log out</a></li>
             <li><a href="/profile">Profile</a></li>
-            <li><a href="/staff">Staff</a></li>
-        </ul>
+            <% if(userObject.userType == "Staff") { %>
+                <li><a href="/staff">Staff</a></li>
+            <% } %>
+          <% } else { %>  
+            <li style="float:right"><a href="/login">Sign in</a></li>
+          <% } %>
+        <li><a href="/contact">Contact us</a></li>
+        
+        
+    </ul>
 
 </header>
 <body>
