--- a/Views/contact.ejs
+++ b/Views/contact.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+    <head>
+        <link rel="stylesheet" href="/css/main.css">
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="/js/carousel.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Green World</title>
 <header>
     <ul>
         <li><a href="/">Home</a></li>
@@ -24,7 +26,24 @@
         
     </ul>
 </header>
-<body>
-    <h1>this is the contact page</h1>
+<body style="background-color: #d3efa5">
+    <div id="contactContent" style="margin: auto; margin-top: 5%; width: 90%">
+        <h1>this is the contact page</h1>
+        <h2>Store hours:</h2>
+        <p>Monday: 9am - 5pm</p>
+        <p>Tuesday: 9am - 5pm</p>
+        <p>Wednesday: 9am - 5pm</p>
+        <p>Thurday: 9am - 5pm</p>
+        <p>Friday: 9am - 5pm</p>
+        <p>Saturday: 10am - 3pm</p>
+        <p>Sunday: CLOSED</p>
+        <br>
+        <h2>Call us:</h2>
+        <p>01-234-5678</p>
+        <br>
+        <h2>Email:</h2>
+        <p>support@greenworld.com</p>
+    </div>
+    
 </body>
 </html>
