--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -228,8 +228,8 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-primary leftLst"><</button>
-                    <button class="btn btn-primary rightLst">></button>
+                    <button class="arrow btn-primary leftLst"><</button>
+                    <button class="arrow btn-primary rightLst">></button>
                 </div>
             </div>
         </div>
