updated css of the index page

--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -18,7 +18,7 @@
                     <a onclick="">Recycle bag</a>
                 </div>
                 <div class= "two row">
-                        <img src="../Public/images/myImage-1565653643559.png" class="cover-img">
+                        <img src="<%= products.image %>" class="cover-img">
                <h1><%= products._id %></h1>
                <h1><%= products.name %></h1>
                <h1><%= products.description%></h1>
