--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -15,59 +15,22 @@
             <div class="row">
                 <div class="MultiCarousel" data-items="1,3,5,6" data-slide="3" id="MultiCarousel"  data-interval="1000">
                     <div class="MultiCarousel-inner">
-                        <div class="item">
-                            <div class="pad15">
-                            <!-- <p class="lead">Multi Item Carousel</p>-->
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
+                        
+                        <% if(products.length>0){ %>
+                            <% for (var i=0; i<products.length; i++) { %>
+                            <div class="item">    
+                                    <div class ="pad15">
+                                            <img src='<%= products[i].image %>' class="cover-img">
+                                                <p>&dollar;<%= products[i].price %></p>
+                                             <a href='/products'><button class="btn">View product</button></a>
+                                           
+                                    </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <!-- <p class="lead">Multi Item Carousel</p>-->
-                                <img class="lead" src="/images/straw.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <!-- <p class="lead">Multi Item Carousel</p>-->
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <!-- <p class="lead">Multi Item Carousel</p>-->
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <img class="lead" src="/images/straw.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="pad15">
-                                <img class="lead" src="/images/bag.jpg" alt="Recycle bag">
-                                <p> $ 10</p>
-                            </div>
-                        </div>
-                    </div>
+                                <% }%>
+                        <% } else { %>
+                            no record found
+                            <% } %>
+                </div>
                     <button class="btn btn-primary leftLst"><</button>
                     <button class="btn btn-primary rightLst">></button>
                 </div>
