--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -70,7 +70,32 @@
                 </div>
             </div>
         </div>
+        <h1>Bottles</h1>
         <!--Third carousel-->
+        <div class="container">
+                <div class="row">
+                    <div class="MultiCarousel" data-items="1,3,5,6" data-slide="3" id="MultiCarousel"  data-interval="1000">
+                        <div class="MultiCarousel-inner">
+                                <% if(products.length>0){ %>
+                                    <% for (var i=0; i<products.length; i++) { %>
+                                    <div class="item">    
+                                            <div class ="pad15">
+                                                    <img class="img1" src='<%= products[i].image %>' class="cover-img">
+                                                        <p>&dollar;<%= products[i].price %></p>
+                                                     <a href='/products'><button class="btn">View product</button></a>
+                                                   
+                                            </div>
+                                    </div>
+                                        <% }%>
+                                <% } else { %>
+                                    no record found
+                                    <% } %>
+                        </div>
+                        <button class="btn btn-primary leftLst"><</button>
+                        <button class="btn btn-primary rightLst">></button>
+                    </div>
+                </div>
+            </div>
        
         </div>
         <br>
