deleted the commented code
deleted the commented code in /addproduct routre.

--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -5,12 +5,15 @@
     <li><a href="/products">Products</a></li>
     <% if(user != undefined){ %>
         <li style="float:right"><a href="/logout">Log out</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <% if(userObject.userType == "Staff") { %>
+          <li><a href="/staff">Staff</a></li>
+      <% } %>
       <% } else{ %>  
         <li style="float:right"><a href="/login">Sign in</a></li>
      <% } %>
     <li><a href="/contact">Contact us</a></li>
-    <li><a href="/profile">Profile</a></li>
-    <li><a href="/staff">Staff</a></li>
+    
     <li style="float:right"><a href="/cart">Shopping cart<span>
       <% if(session.cart) { %>
       <span class="badge"><%= session.cart.totalQty %></span>
@@ -18,3 +21,4 @@
     
       
 </ul>
+
