--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -100,10 +100,11 @@
         </div>
         <br>
         <br>
-        <footer>
-          
-        </footer>
+        
     </div>
+    <footer>
+        <% include ./partials/footer %>
+    </footer>
 </body>
 
 </html>
