--- a/Views/cart.ejs
+++ b/Views/cart.ejs
@@ -4,7 +4,23 @@
         <% include ./partials/head %>
     </head>
     <header>
-        <% include ./partials/header %>
+        <ul >
+            <li><a href="/">Home</a></li>
+            <li><a href="/products">Products</a></li>
+            <% if(user != undefined){ %>
+                <li style="float:right"><a href="/logout">Log out</a></li>
+              
+              <% } else{ %>  
+                <li style="float:right"><a href="/login">Sign in</a></li>
+            <% } %>
+            <li><a href="/contact">Contact us</a></li>
+            
+            <li style="float:right"><a href="/cart">Shopping cart<span>
+              <% if(session.cart) { %>
+              <span class="badge"><%= session.cart.totalQty %></span>
+          <% } %></span></a></li>
+            
+        </ul>
     </header>
     <body>
             <% if (products) { %>
@@ -89,6 +105,9 @@
             <h1>cart is empty</h1>
             <a href='/products %>'><button class="">Continue Shopping</button></a>
             <% } %>
+            <footer>
+                    <% include ./partials/footer %>
+            </footer>
     </body>
     
 </html>
