--- a/Views/editProduct.ejs
+++ b/Views/editProduct.ejs
@@ -19,6 +19,8 @@
             </div>--> 
            <!-- <form action="/addProduct" method="post"  enctype="application/x-www-form-urlencoded">
             </form >-->
+            <label>Image:</label>
+            <input name="image" type="text" value="<%= products.image %>"/>
             <br>
             <label>Name:</label>
             <input name="name" type="text" value="<%= products.name %>"/>
