--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -8,20 +8,26 @@
     </header>
     <body>
         <div id="container">
-            <section class="container">
-                <div class= "two row">
+            <section class="">
+                <div class= "productid">
+                    <div class="imgdisplay">
                         <img class="img2 img-responsive" src="<%= products.image %>" class="cover-img">
-              
-                        <h1 class="detail"><%= products.name %></h1>
-                        <h1 class="detail"><%= products.description%></h1>
-                        <div class="btn121">
+                    </div>   
+                    <div class="detaildisplay">
+                        <h1 class="detail text-success"><%= products.name %></h1>
+                        <a href='/add-to-cart/<%= products._id %>' ><button class="btn btn-danger dis">Add to cart</button></a>
+                    </div>
+                    <div class="container1">
+                        <h1 ><%= products.description%></h1>
+                    </div>
+                        <div >
                                 <a href='/editProduct/<%= products._id %>'><button class="btn">Edit product</button></a>
-                                <a href='/add-to-cart/<%= products._id %>'><button class="btn">Add to cart</button></a>
-                        </div>   
+                                
+                        </div> 
                 </div>
             </section>
             <footer>
-              
+                    <% include ./partials/footer %>
             </footer>
         </div>
     </body>
