--- a/Views/straw.ejs
+++ b/Views/straw.ejs
@@ -7,23 +7,28 @@
         <% include ./partials/header %>
     </header>
     <body>
+        <div>
+            <hr>
+            <div class="category" >
+                    <h4 class="one three" >Select a category</h4>
+                    <a class="one" href='/products'>All Products</a>
+
+                    <a class="one" href='/straw'>Straws</a>
+                    
+                    <a class="one"href='/bottles'>Bottles</a>
+                   
+                    <a class="one" href='/bag'>Recycle bag</a>
+                </div>
             <section class="container">
-                    <div class="one">
-                            <h3>Select a category</h3>
-                            <a href='/straw'>Straws</a>
-                            <br>
-                            <a href='/bottles'>Bottles</a>
-                            <br>
-                            <a href='/bag'>Recycle bag</a>
-                        </div>
-                <div class= "two row">
+                    
+                <div class= "two">
                     <% if(products.length>0){ %>
                         <% for (var i=0; i<products.length; i++) { %>
                                 <div class="column">
                                         <img class="img1" src='<%= products[i].image %>' class="cover-img">
                                             <p><%= products[i].name %></p>
                                             <h3>&dollar;<%= products[i].price %></h3>
-                                         <a href='/products/<%= products[i].id %>'><button class="btn">View product</button></a>
+                                         <a href='/products/<%= products[i].id %>'><button class="btn btn-success">View product</button></a>
                                        
                                 </div>
                             <% }%>
@@ -33,8 +38,8 @@
                 </div>
             </section>
             <footer>
-              
-            </footer>
-        
+                    <% include ./partials/footer %>
+                </footer>
+        </div>
     </body>
 </html>
