--- a/views/products.ejs
+++ b/views/products.ejs
@@ -7,8 +7,8 @@
             <% include ./partials/header %>
     </header>
     <body>
-        <div id="container">
-            <h1>Products!</h1>
+        <div >
+         
             <hr>
         <!--<div>
                 <h3>Select Category:</h3>
@@ -18,25 +18,29 @@
                     <input type="checkbox" name="Bottles" value="Bottles" checked> Boottles<br><br>
                 </form>
             </div>--> 
-            <section class="container">
-                <div class="one">
-                    <h3>Select a category</h3>
-                    <a href='/straw'>Straws</a>
-                    <br>
-                    <a href='/bottles'>Bottles</a>
-                    <br>
-                    <a href='/bag'>Recycle bag</a>
+            <div class="category" >
+                    <h4 class="one three" >Select a category</h4>
+                    <a class="one" href='/products'>All Products</a>
+
+                    <a class="one" href='/straw'>Straws</a>
+                    
+                    <a class="one"href='/bottles'>Bottles</a>
+                   
+                    <a class="one" href='/bag'>Recycle bag</a>
                 </div>
-                <div class= "two row" > 
+            <section class="container">
+                
+                <div class= "two" > 
                     <% if(products.length>0){ %>
                         <% for (var i=0; i<products.length; i++) { %>
-                                <div class="column">
-                                        <img class="img1" src='<%= products[i].image %>' class="cover-img">
-                                            <p><%= products[i].name %></p>
+                                <div class="column card">
+                                        <img class="img1 card-img-top" src='<%= products[i].image %>' class="cover-img">
+                                        <div class="card-body">
+                                            <p class="card-title"><%= products[i].name %></p>
                                             <h3>&dollar;<%= products[i].price %></h3>
-                                         <a href='/products/<%= products[i].id %>'><button class="btn">View product</button></a>
-                                       
-                                    </div>
+                                            <a href='/products/<%= products[i].id %>'><button class="btn btn-success">View product</button></a>
+                                         </div>
+                                </div>
                             <% }%>
                     <% } else { %>
                         no record found
@@ -46,9 +50,10 @@
                 </div>
                
             </section>
-            <footer>
+            
+        </div>
+        <footer>
                 <% include ./partials/footer %>
             </footer>
-        </div>
     </body>
 </html>
