--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -27,9 +27,7 @@ li a:hover {
   overflow: hidden;
 	position: relative;
 }
-.footer{
-  position: absolute;
-}
+
 /*login page css*/
 
 #login-form input{
@@ -69,7 +67,7 @@ li a:hover {
 #login-form{
     margin-left: 6.5%;
     position: absolute;
-    top: 40%;
+    top: 20%;
 }
 
 #signup{
@@ -92,18 +90,37 @@ li a:hover {
     width:140px
 }
 .img2{
-  height:40%;
-  width:40%;
+  height:60%;
+  width:100%;
+  overflow:hidden;
+ 
+
 }
 .detail{
-  float: right;
+  font-family: "Times New Roman", Times, serif;
+
 }
-.btn121{
+.imgdisplay{
+  float: left;
+  margin-left: 5px;
+  
+
+}
+.detaildisplay{
+  margin-bottom: 5%;
+}
+.productid{
+  width:100%;
+}
+.dis{
+  margin-left: 25%;
+}
+/* .btn121{
   padding-left: 70%;
   padding-bottom: 5%;
   padding-top: 3%;
 }
-/* heading h1*/
+heading h1*/
 
 h1 {
     text-align: center;
@@ -124,21 +141,42 @@ h1 {
 .container {
     width: 100%;
     height: 100%;
-    background:white;
     margin: auto;
     padding: 10px;
+    margin-bottom: 10px;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid rgb(236, 233, 233);
+    border-radius: 3px;
+}
+.container1{
+  float:right;
+  width: 60%;
+}
+.category{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  margin-left: 5%;
 }
 .one {
-    width: 15%;
-    height: 100%;
-    background: white;
-    float: left;
+  -webkit-box-flex: 1 1 auto;
+    -moz-box-flex:  1 1 auto;
+    -webkit-flex:  1 1 auto;
+    -ms-flex:  1 1 auto;
+    flex:  1 1 auto;
+    
 }
 .two {
     width:100%;
     height: auto;
     background: white;
     margin-bottom: 5%;
+    margin-left: 80px;
+}
+.three{
+  padding-bottom: 15px;
 }
 
 /* two equal columns that floats next to each other */
@@ -161,16 +199,16 @@ h1 {
   }
 
 /* footer*/
-body{
-  
-    position: relative;
+div.relative {
+  position: relative;
+
 }
 
-footer{
-    position: absolute;
-    width:100%;
-    top:100%;
-    margin-bottom: 0px;
+div.absolute {
+  position: absolute;
+  top:100%;
+  right: 0;
+  width: 100%;
 }
 /* buy button*/
 
@@ -228,10 +266,7 @@ footer{
   }
   
   .container {
-    background-color: #f2f2f2;
-    padding: 5px 20px 15px 20px;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
+    
   }
   
   input[type=text] {
