--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -17,7 +17,7 @@
                         <input type="text" name="username"/><br>
                         <label>Password:</label>
                         <input type="password" name="password"/>
-                        <input type="submit" label="login">
+                        <input class="btn" type="submit" label="login">
                 </form>
             </div>
             <div id="signup">
@@ -26,7 +26,7 @@
                             <label>Username:</label>
                             <input type="text" name="username"/><br>
                             <label>Password:</label>
-                            <input  type="password" name="password"/><br>
+                            <input type="password" name="password"/><br>
                             <label>Full Name:</label>
                             <input type="text" name="fullName" /><br>
                             <label>Email address:</label>
@@ -38,7 +38,7 @@
                             <label>Delivery Address:</label>
                             <input type="text" name="deliveryAddress" /><br>
 
-                            <input type="submit" label="Sign up" >
+                            <input class="btn" type="submit" label="Sign up" >
                     </form>
                 <!--<h1>Or signup.</h1>-->
             </div>
