updated contact page

--- a/Views/contact.ejs
+++ b/Views/contact.ejs
@@ -5,10 +5,10 @@
 <header>
     <% include ./partials/header %>
 </header>
-<body style="background-color: #d3efa5">
+<body style="background-color: #f6f7f5">
     <div id="contactContent" style="margin: auto; margin-top: 5%; width: 90%">
-        <h1>this is the contact page</h1>
-        <h2>Store hours:</h2>
+        <h1 class="detail text-success" >Contact Info</h1>
+        <h2 class="detail text-success">Store hours:</h2>
         <p>Monday: 9am - 5pm</p>
         <p>Tuesday: 9am - 5pm</p>
         <p>Wednesday: 9am - 5pm</p>
@@ -17,10 +17,10 @@
         <p>Saturday: 10am - 3pm</p>
         <p>Sunday: CLOSED</p>
         <br>
-        <h2>Call us:</h2>
+        <h2 class="detail text-success">Call us:</h2>
         <p>01-234-5678</p>
         <br>
-        <h2>Email:</h2>
+        <h2 class="detail text-success">Email:</h2>
         <p>support@greenworld.com</p>
     </div>
     
