--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -3,5 +3,5 @@
 <ul>
     <li><a href=" ">Privacy Policy</a></li>
     <li><a href=" ">Refund Policy</a></li>
-    <li><a href=" ">Contact Us</a></li>
+    <li><a href="/contact ">Contact Us</a></li>
 </ul>
