--- a/Views/cart.ejs
+++ b/Views/cart.ejs
@@ -93,7 +93,7 @@
                                 </div>
                                 
                                 </div>
-                                <input type="submit" value="Submit" class="btn">
+                                <input type="submit" value="Submit" class="btn btn-success">
                             </form>
                             </div>
                         </div>
