--- a/Views/profile.ejs
+++ b/Views/profile.ejs
@@ -22,7 +22,7 @@
         <p>Contact Number: <%= loggedUser.contactNumber %></p>
         <p>Billing Address: <%= loggedUser.billingAddress %></p>
         <p>Delivery Address: <%= loggedUser.deliveryAddress %></p>
-        <input type="submit" label="Edit Profile" >
+        <input type="submit" class="btn btn-success dis"  label="Edit Profile" >
     </form>
         <% } else { %>
             <form id="editProfile-Form" method="POST" action="/profile">
@@ -40,7 +40,7 @@
                 <input type="text" name="billingAddress" placeholder="<%= loggedUser.billingAddress %>"/><br>
                 <label>Delivery Address:</label>
                 <input type="text" name="deliveryAddress" placeholder="<%= loggedUser.deliveryAddress %>"/><br>
-                <input type="submit" label="Save Profile" >
+                <input class="btn btn-success" type="submit" label="Save Profile" >
             </form>
             <% } %>
     </div>
@@ -49,7 +49,7 @@
         <br>
         <br>
         <footer>
-                <% include ./partials/footer %>
+           
         </footer>
 </body>
 
