--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -34,7 +34,7 @@
             <label>Category</label>
             <input name="category" type="text"/>
             <br>
-            <input type="submit" >
+            <input type="submit" class="btn btn-success" >
         </form>
         <br>
        <!--<img class="lead" src="<%= typeof file != 'undefined' ? file : '' %>" alt="Recycle bag">--> 
