--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -46,6 +46,7 @@ li a:hover {
 #signup-form input{
     margin-top: 0px;
     width: 60%;
+    margin-bottom: 10px;
 }
 #signup-form label{
     display: inline-block;
@@ -113,7 +114,7 @@ li a:hover {
   width:100%;
 }
 .dis{
-  margin-left: 25%;
+  margin-left: 5%;
 }
 /* .btn121{
   padding-left: 70%;
