--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -14,31 +14,31 @@
                 <form id="login-form" method="post" action="/loginUser">
                         <h1 style="text-align: center">Log in!</h1>
                         <label>Username:</label>
-                        <input type="text" name="username"/><br>
+                        <input type="text" name="username" required/><br>
                         <label>Password:</label>
-                        <input type="password" name="password"/>
-                        <input class="btn" type="submit" label="login">
+                        <input type="password" name="password" required/>
+                        <input class="btn btn-success" type="submit" label="login">
                 </form>
             </div>
             <div id="signup">
                     <form id="signup-form" method="post" action="/signUp">
                             <h1 style="text-align: center">Sign up!</h1>
                             <label>Username:</label>
-                            <input type="text" name="username"/><br>
+                            <input type="text" name="username" required/><br>
                             <label>Password:</label>
-                            <input type="password" name="password"/><br>
+                            <input type="password" name="password" required/><br>
                             <label>Full Name:</label>
-                            <input type="text" name="fullName" /><br>
+                            <input type="text" name="fullName" required/><br>
                             <label>Email address:</label>
-                            <input type="text" name="email" /><br>
+                            <input type="text" name="email" required/><br>
                             <label>Contact Number:</label>
-                            <input type="text" name="contactNumber" /><br>
+                            <input type="text" name="contactNumber" required/><br>
                             <label>Billing Address:</label>
-                            <input type="text" name="billingAddress" /><br>
+                            <input type="text" name="billingAddress"required /><br>
                             <label>Delivery Address:</label>
-                            <input type="text" name="deliveryAddress" /><br>
+                            <input type="text" name="deliveryAddress" required/><br>
 
-                            <input class="btn" type="submit" label="Sign up" >
+                            <input class="btn btn-success" type="submit" label="Sign up" >
                     </form>
                 <!--<h1>Or signup.</h1>-->
             </div>
