--- a/Views/productId.ejs
+++ b/Views/productId.ejs
@@ -15,20 +15,23 @@
                     </div>   
                     <div class="detaildisplay">
                         <h1 class="detail text-success"><%= products.name %></h1>
+                        <h1 class="detail text-success">$<%= products.price %></h1>
                         <a href='/add-to-cart/<%= products._id %>' ><button class="btn btn-danger dis">Add to cart</button></a>
                     </div>
                     <div class="container1">
-                        <h1 ><%= products.description%></h1>
+                        <h1 class="detail" ><%= products.description%></h1>
                     </div>
                         <div >
-                                <a href='/editProduct/<%= products._id %>'><button class="btn">Edit product</button></a>
+                             <a href='/editProduct/<%= products._id %>'><button class="btn">Edit product</button></a>
                                 
                         </div> 
                 </div>
+                
             </section>
-            <footer>
-                    <% include ./partials/footer %>
-            </footer>
+
         </div>
     </body>
+    <footer>
+           
+    </footer>
 </html>
